fix: MySQLの設定を修正する

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -74,20 +74,19 @@ services:
       - MYSQL_USER=${DB_USER}
       - MYSQL_PASSWORD=${DB_PASS}
       - MYSQL_ROOT_PASSWORD=${DB_PASS}
-      - TZ=Asia/Tokyo
 
-  db-testing:
-    container_name: ${APP_NAME}-db-testing
-    build:
-      context: .
-      dockerfile: ./infra/docker/mysql/Dockerfile
-    ports:
-      - 3000:3306
-    environment:
-      - MYSQL_DATABASE=${DB_TEST_NAME}
-      - MYSQL_ROOT_PASSWORD=password
-      - MYSQL_ALLOW_EMPTY_PASSWORD="yes"
-      - TZ=Asia/Tokyo
+  # db-testing:
+  #   container_name: ${APP_NAME}-db-testing
+  #   build:
+  #     context: .
+  #     dockerfile: ./infra/docker/mysql/Dockerfile
+  #   ports:
+  #     - 3000:3306
+  #   environment:
+  #     - MYSQL_DATABASE=${DB_TEST_NAME}
+  #     - MYSQL_ROOT_PASSWORD=password
+  #     - MYSQL_ALLOW_EMPTY_PASSWORD="yes"
+  #     - TZ=Asia/Tokyo
       
   redis:
     image: "redis:7.2.4-alpine"
@@ -99,9 +98,9 @@ services:
       - redis-store:/data
       - ./infra/docker/redis/redis.conf:/etc/redis.conf
 
-  redis-testing:
-    image: "redis:7.2.4-alpine"
-    container_name: ${APP_NAME}-redis-testing
-    command: redis-server --appendonly yes
-    ports:
-      - 6380:6379
+  # redis-testing:
+  #   image: "redis:7.2.4-alpine"
+  #   container_name: ${APP_NAME}-redis-testing
+  #   command: redis-server --appendonly yes
+  #   ports:
+  #     - 6380:6379
