--- a/src/composer.json
+++ b/src/composer.json
@@ -12,6 +12,7 @@
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^3.1",
+        "brianium/paratest": "^7.5",
         "fakerphp/faker": "^1.23",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.26",
@@ -24,7 +25,8 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/",
-            "File\\": "file/"
+            "File\\": "file/",
+            "File\\Eloquent\\": "file/eloquent/"
         }
     },
     "autoload-dev": {
@@ -47,6 +49,10 @@
             "@php artisan key:generate --ansi",
             "@php -r \"file_exists('database/database.sqlite') || touch('database/database.sqlite');\"",
             "@php artisan migrate --graceful --ansi"
+        ],
+        "unit": [
+            "@php artisan config:clear",
+            "@php artisan test --parallel --processes=1 tests/Unit/UseCase/"
         ]
     },
     "extra": {
