--- a/src/composer.json
+++ b/src/composer.json
@@ -6,9 +6,12 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "bacon/bacon-qr-code": "^3.0",
         "laravel/framework": "^11.9",
+        "laravel/socialite": "^5.16",
         "laravel/tinker": "^2.9",
-        "livewire/livewire": "^3.5"
+        "livewire/livewire": "^3.5",
+        "pragmarx/google2fa-laravel": "^2.2"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^3.1",
