--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -75,31 +75,31 @@ services:
       - MYSQL_PASSWORD=${DB_PASS}
       - MYSQL_ROOT_PASSWORD=${DB_PASS}
 
-  db-testing:
-    container_name: ${APP_NAME}-db-testing
-    build:
-      context: .
-      dockerfile: ./infra/docker/mysql/Dockerfile
-    ports:
-      - 3000:3306
-    environment:
-      - MYSQL_DATABASE=${DB_TEST_NAME}
-      - MYSQL_ROOT_PASSWORD=password
-      - MYSQL_ALLOW_EMPTY_PASSWORD="yes"
+  # db-testing:
+  #   container_name: ${APP_NAME}-db-testing
+  #   build:
+  #     context: .
+  #     dockerfile: ./infra/docker/mysql/Dockerfile
+  #   ports:
+  #     - 3000:3306
+  #   environment:
+  #     - MYSQL_DATABASE=${DB_TEST_NAME}
+  #     - MYSQL_ROOT_PASSWORD=password
+  #     - MYSQL_ALLOW_EMPTY_PASSWORD="yes"
       
-  redis:
-    image: "redis:7.2.4-alpine"
-    container_name: ${APP_NAME}-redis
-    command: redis-server --appendonly yes
-    ports:
-      - 6379:6379
-    volumes:
-      - redis-store:/data
-      - ./infra/docker/redis/redis.conf:/etc/redis.conf
+  # redis:
+  #   image: "redis:7.2.4-alpine"
+  #   container_name: ${APP_NAME}-redis
+  #   command: redis-server --appendonly yes
+  #   ports:
+  #     - 6379:6379
+  #   volumes:
+  #     - redis-store:/data
+  #     - ./infra/docker/redis/redis.conf:/etc/redis.conf
 
-  redis-testing:
-    image: "redis:7.2.4-alpine"
-    container_name: ${APP_NAME}-redis-testing
-    command: redis-server --appendonly yes
-    ports:
-      - 6380:6379
+  # redis-testing:
+  #   image: "redis:7.2.4-alpine"
+  #   container_name: ${APP_NAME}-redis-testing
+  #   command: redis-server --appendonly yes
+  #   ports:
+  #     - 6380:6379
