--- a/src/composer.json
+++ b/src/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.2",
         "bacon/bacon-qr-code": "^3.0",
+        "intervention/image": "^3.9",
         "laravel/framework": "^11.9",
         "laravel/socialite": "^5.16",
         "laravel/tinker": "^2.9",
