install: 画像をダウンロードするライブラリをhtml2canvasからhtmltoimageに変更する

--- a/src/package.json
+++ b/src/package.json
@@ -16,6 +16,6 @@
         "vite": "^5.0"
     },
     "dependencies": {
-        "html2canvas": "^1.4.1"
+        "html-to-image": "^1.11.11"
     }
 }
