--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -75,17 +75,17 @@ services:
       - MYSQL_PASSWORD=${DB_PASS}
       - MYSQL_ROOT_PASSWORD=${DB_PASS}
 
-  # db-testing:
-  #   container_name: ${APP_NAME}-db-testing
-  #   build:
-  #     context: .
-  #     dockerfile: ./infra/docker/mysql/Dockerfile
-  #   ports:
-  #     - 3000:3306
-  #   environment:
-  #     - MYSQL_DATABASE=${DB_TEST_NAME}
-  #     - MYSQL_ROOT_PASSWORD=password
-  #     - MYSQL_ALLOW_EMPTY_PASSWORD="yes"
+  db-testing:
+    container_name: ${APP_NAME}-db-testing
+    build:
+      context: .
+      dockerfile: ./infra/docker/mysql/Dockerfile
+    ports:
+      - 3000:3306
+    environment:
+      - MYSQL_DATABASE=${DB_TEST_NAME}
+      - MYSQL_ROOT_PASSWORD=password
+      - MYSQL_ALLOW_EMPTY_PASSWORD="yes"
       
   # redis:
   #   image: "redis:7.2.4-alpine"
