--- a/src/package.json
+++ b/src/package.json
@@ -16,6 +16,7 @@
         "vite": "^5.0"
     },
     "dependencies": {
-        "html-to-image": "^1.11.11"
+        "html-to-image": "^1.11.11",
+        "sortablejs": "^1.15.5"
     }
 }
