--- a/src/package.json
+++ b/src/package.json
@@ -17,6 +17,7 @@
     },
     "dependencies": {
         "html-to-image": "^1.11.11",
+        "interactjs": "^1.10.27",
         "sortablejs": "^1.15.5"
     }
 }
