fix: nginxを修正する

--- a/infra/docker/nginx/conf.d/default.conf
+++ b/infra/docker/nginx/conf.d/default.conf
@@ -1,6 +1,7 @@
 server {
     listen 8080;
-    root         /var/www/src/public;
+    server_name cfcrating.com;
+    root /var/www/src/public;
 
     add_header X-Frame-Options "SAMEORIGIN";
     add_header X-XSS-Protection "1; mode=block";
@@ -17,13 +18,10 @@ server {
     location = /favicon.ico { access_log off; log_not_found off; }
     location = /robots.txt  { access_log off; log_not_found off; }
 
-    error_page 404 /index.php;
-
     location ~ \.php$ {
-        root           /var/www/src/public;
         fastcgi_pass   unix:/var/run/php-fpm/php-fpm.sock;
         fastcgi_index  index.php;
-        fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
+        fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
         include        fastcgi_params;
     }
 
