fix: nginxの設定を変更する

--- a/infra/docker/nginx/conf.d/default.conf
+++ b/infra/docker/nginx/conf.d/default.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name cfcrating.com;
+    server_name www.cfcrating.com cfcrating.com;
     root /var/www/src/public;
 
     add_header X-Frame-Options "SAMEORIGIN";
