--- a/infra/docker/nginx/default.conf
+++ b/infra/docker/nginx/default.conf
@@ -1,12 +1,16 @@
+access_log /dev/stdout main;
+error_log /dev/stderr warn;
+
 server {
-    listen 8080;
-    root         /var/www/src/public;
+    listen 80;
+    listen [::]:80;
+    root /var/www/src/public;
 
     add_header X-Frame-Options "SAMEORIGIN";
     add_header X-XSS-Protection "1; mode=block";
     add_header X-Content-Type-Options "nosniff";
 
-    index index.html index.htm index.php;
+    index index.php;
 
     charset utf-8;
 
@@ -20,11 +24,9 @@ server {
     error_page 404 /index.php;
 
     location ~ \.php$ {
-        root           /var/www/src/public;
-        fastcgi_pass   unix:/var/run/php-fpm/php-fpm.sock;
-        fastcgi_index  index.php;
-        fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
-        include        fastcgi_params;
+        fastcgi_pass app:9000;
+        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
+        include fastcgi_params;
     }
 
     location ~ /\.(?!well-known).* {
