--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,5 @@
 volumes:
-  php-fpm-socket:
   db-store:
-  redis-store:
 
 services:
   web:
@@ -20,14 +18,9 @@ services:
         protocol: tcp
         mode: host
     volumes:
-      - type: volume
-        source: php-fpm-socket
-        target: /var/run/php-fpm
       - type: bind
         source: ./src
         target: /var/www/src
-    environment:
-      - TZ=Asia/Tokyo
 
   app:
     container_name: ${APP_NAME}-app
@@ -42,16 +35,11 @@ services:
         - GROUP_ID=${GROUP_ID}
         - GROUP_NAME=${GROUP_NAME}
     volumes:
-      - type: volume
-        source: php-fpm-socket
-        target: /var/run/php-fpm
       - type: bind
         source: ./src
         target: /var/www/src
     extra_hosts:
       - "host.docker.internal:host-gateway"
-    depends_on:
-      - web
 
   db:
     container_name: ${APP_NAME}-db
@@ -72,3 +60,15 @@ services:
       - MYSQL_USER=${DB_USER}
       - MYSQL_PASSWORD=${DB_PASS}
       - MYSQL_ROOT_PASSWORD=${DB_PASS}
+
+  db-testing:
+    container_name: ${APP_NAME}-db-testing
+    build:
+      context: .
+      dockerfile: ./infra/docker/mysql/Dockerfile
+    ports:
+      - 3000:3306
+    environment:
+      - MYSQL_DATABASE=${DB_TEST_NAME}
+      - MYSQL_ROOT_PASSWORD=password
+      - MYSQL_ALLOW_EMPTY_PASSWORD="yes"
