--- a/infra/docker/nginx/default.conf
+++ b/infra/docker/nginx/default.conf
@@ -1,13 +1,16 @@
+access_log /dev/stdout main;
+error_log /dev/stderr warn;
+
 server {
     listen 80;
-    server_name www.cfcrating.com cfcrating.com;
+    listen [::]:80;
     root /var/www/src/public;
 
     add_header X-Frame-Options "SAMEORIGIN";
     add_header X-XSS-Protection "1; mode=block";
     add_header X-Content-Type-Options "nosniff";
 
-    index index.html index.htm index.php;
+    index index.php;
 
     charset utf-8;
 
@@ -18,11 +21,12 @@ server {
     location = /favicon.ico { access_log off; log_not_found off; }
     location = /robots.txt  { access_log off; log_not_found off; }
 
+    error_page 404 /index.php;
+
     location ~ \.php$ {
-        fastcgi_pass   unix:/var/run/php-fpm/php-fpm.sock;
-        fastcgi_index  index.php;
-        fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        include        fastcgi_params;
+        fastcgi_pass app:9000;
+        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
+        include fastcgi_params;
     }
 
     location ~ /\.(?!well-known).* {
