--- a/infra/docker/nginx/default.conf
+++ b/infra/docker/nginx/default.conf
@@ -4,6 +4,7 @@ error_log /dev/stderr warn;
 server {
     listen 80;
     listen [::]:80;
+    server_name .cfcrating.com;
     root /var/www/src/public;
 
     add_header X-Frame-Options "SAMEORIGIN";
