fix: Dockerを修正する

--- a/infra/docker/nginx/Dockerfile
+++ b/infra/docker/nginx/Dockerfile
@@ -5,4 +5,13 @@ WORKDIR /var/www/src
 
 ENV TZ=UTC
 
-COPY ./infra/docker/nginx/*.conf /etc/nginx/conf.d/
+COPY ./infra/docker/nginx/nginx.conf /etc/nginx/
+COPY ./infra/docker/nginx/default.conf /etc/nginx/conf.d/
+
+RUN <<EOF
+  groupmod -g 1000 nginx
+  usermod -u 1000 nginx
+  chown -R nginx:nginx /var/cache/nginx/ \
+        /var/run/ \
+        /var/log/nginx/
+EOF
