--- a/infra/docker/php/php.ini
+++ b/infra/docker/php/php.ini
@@ -1,14 +1,14 @@
 zend.exception_ignore_args = off
-expose_php = on
+expose_php = off
 max_execution_time = 30
 max_input_vars = 1000
 upload_max_filesize = 64M
 post_max_size = 128M
 memory_limit = 256M
 error_reporting = E_ALL
-display_errors = on
-display_startup_errors = on
-log_errors = on
+display_errors = off
+display_startup_errors = off
+log_errors = off
 error_log = /dev/stderr
 default_charset = UTF-8
 
@@ -23,7 +23,7 @@ opcache.jit_buffer_size = 128M
 date.timezone = Asia/Tokyo
 
 [mysqlnd]
-mysqlnd.collect_memory_statistics = on
+mysqlnd.collect_memory_statistics = off
 
 [Assertion]
 zend.assertions = 1
