--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -4,7 +4,7 @@ volumes:
 services:
   web:
     container_name: ${APP_NAME}-web
-    build:
+    build: 
       context: .
       dockerfile: ./infra/docker/nginx/Dockerfile
       args:
@@ -18,21 +18,15 @@ services:
         published: ${WEB_PORT}
         protocol: tcp
         mode: host
-      - target: 443
-        published: 443
-        protocol: tcp
-        mode: host
     volumes:
       - type: bind
         source: ./src
         target: /var/www/src
-      - type: bind
-        source: /etc/letsencrypt
-        target: /etc/letsencrypt
-        read_only: true
 
   app:
     container_name: ${APP_NAME}-app
+    ports:
+      - 5173:5173
     build:
       context: .
       dockerfile: ./infra/docker/php/Dockerfile
@@ -46,6 +40,8 @@ services:
       - type: bind
         source: ./src
         target: /var/www/src
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 
   db:
     container_name: ${APP_NAME}-db
@@ -66,3 +62,15 @@ services:
       - MYSQL_USER=${DB_USER}
       - MYSQL_PASSWORD=${DB_PASS}
       - MYSQL_ROOT_PASSWORD=${DB_PASS}
+
+  db-testing:
+    container_name: ${APP_NAME}-db-testing
+    build:
+      context: .
+      dockerfile: ./infra/docker/mysql/Dockerfile
+    ports:
+      - 3000:3306
+    environment:
+      - MYSQL_DATABASE=${DB_TEST_NAME}
+      - MYSQL_ROOT_PASSWORD=password
+      - MYSQL_ALLOW_EMPTY_PASSWORD="yes"
