--- a/src/package.json
+++ b/src/package.json
@@ -2,7 +2,7 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "dev": "vite",
+        "dev": "vite --config vite.config.local.js",
         "build": "vite build"
     },
     "devDependencies": {
