--- a/infra/docker/php/php.ini
+++ b/infra/docker/php/php.ini
@@ -1,13 +1,13 @@
 zend.exception_ignore_args = off
-expose_php = on
+expose_php = pff
 max_execution_time = 30
 max_input_vars = 1000
 upload_max_filesize = 64M
 post_max_size = 128M
 memory_limit = 256M
 error_reporting = E_ALL
-display_errors = on
-display_startup_errors = on
+display_errors = off
+display_startup_errors = off
 log_errors = on
 error_log = /dev/stderr
 default_charset = UTF-8
@@ -20,13 +20,13 @@ opcache.optimization_level=0x7FFFBFFF
 opcache.jit_buffer_size = 128M
 
 [Date]
-date.timezone = Asia/Tokyo
+date.timezone = ${TZ}
 
 [mysqlnd]
-mysqlnd.collect_memory_statistics = on
+mysqlnd.collect_memory_statistics = off
 
 [Assertion]
-zend.assertions = 1
+zend.assertions = -1
 
 [mbstring]
 mbstring.language = Japanese
