--- a/src/package.json
+++ b/src/package.json
@@ -2,6 +2,7 @@
     "private": true,
     "type": "module",
     "scripts": {
+        "start": "vite",
         "dev": "vite --config vite.config.local.js",
         "build": "vite build"
     },
