fix: 本番環境の調整

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,10 +1,11 @@
+# srcファイル
 /src/node_modules
 /src/public/hot
 /src/public/storage
 /src/storage/app/*
 /src/storage/framework/cache/data/*
 /src/storage/framework/sessions/*
-/src/storage/framework/testing/*
+/src/storage/framework/testing
 /src/storage/framework/views/*
 /src/storage/logs/*
 /src/storage/*.key
@@ -15,10 +16,21 @@
 /src/phpunit.xml
 /src/README.md
 /src/npm-debug.log
+/src/_ide_helper_models.php
+/src/_ide_helper.php
+/src/vite.config.local.js
+/src/vite.config.local.js
+/src/tests
+/src/database/seeders/Test
+/src/database/seeders/TestGuestSeeder.php
+
+# 環境ファイル
 /.github
 /.git
 /.idea
 /.vscode
+/Memo
+/bin
 **.env*
 **.editorconfig
 **.gitattributes
