--- a/compose.local.yml
+++ b/compose.local.yml
@@ -3,23 +3,20 @@ volumes:
 
 services:
   web:
-    container_name: ${APP_NAME}-web
+    container_name: ${APP_NAME}-web-${ENV}
     build: 
       context: .
       dockerfile: ./infra/docker/nginx/Dockerfile
-      target: ${APP_BUILD_TARGET}
+      target: ${ENV}
     ports:
-      - target: 80
-        published: ${WEB_PORT}
-        protocol: tcp
-        mode: host
+      - ${WEB_PORT}:80
     volumes:
       - type: bind
         source: ./src
         target: /var/www/src
 
   app:
-    container_name: ${APP_NAME}-app
+    container_name: ${APP_NAME}-app-${ENV}
     build:
       context: .
       dockerfile: ./infra/docker/php/Dockerfile
@@ -27,7 +24,7 @@ services:
         - UID=${UID}
         - GID=${GID}
         - USER_NAME=${USER_NAME}
-      target: ${APP_BUILD_TARGET}
+      target: ${ENV}
     ports:
       - 5173:5173
     volumes:
@@ -36,15 +33,12 @@ services:
         target: /var/www/src
 
   db:
-    container_name: ${APP_NAME}-db
+    container_name: ${APP_NAME}-db-${ENV}
     build:
       context: .
       dockerfile: ./infra/docker/mysql/Dockerfile
     ports:
-      - target: 3306
-        published: ${DB_PORT:-3306}
-        protocol: tcp
-        mode: host
+      - ${DB_PORT}:3306
     volumes:
       - type: volume
         source: db-store
@@ -57,7 +51,7 @@ services:
       - MYSQL_ROOT_PASSWORD=${DB_PASS}
 
   db-testing:
-    container_name: ${APP_NAME}-db-testing
+    container_name: ${APP_NAME}-db-testing-${ENV}
     build:
       context: .
       dockerfile: ./infra/docker/mysql/Dockerfile
