--- a/infra/docker/nginx/Dockerfile
+++ b/infra/docker/nginx/Dockerfile
@@ -5,12 +5,18 @@ WORKDIR /var/www/src
 
 ENV TZ=UTC
 
+ARG UID ${UID}
+ARG GID ${GID}
+
+COPY ./src/public /var/www/src/public
+
 RUN <<EOF
-  groupmod -g 1000 nginx
-  usermod -u 1000 nginx
+  groupmod -g $GID nginx
+  usermod -u $UID nginx
   chown -R nginx:nginx /var/cache/nginx/ \
-        /var/run/ \
-        /var/log/nginx/
+    /var/run/ \
+    /var/log/nginx/ \
+    /var/www/src
 EOF
 
 FROM base AS local
@@ -19,8 +25,11 @@ ENV APP_ENV=local
 
 COPY ./infra/docker/nginx/default.local.conf /etc/nginx/conf.d/default.conf
 
+
 FROM base AS production
 
 ENV APP_ENV=production
 
 COPY ./infra/docker/nginx/default.conf /etc/nginx/conf.d/default.conf
+
+USER nginx
