--- a/infra/docker/nginx/default.conf
+++ b/infra/docker/nginx/default.conf
@@ -14,7 +14,7 @@ server {
     root /var/www/src/public;
 
     ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers HIGH:!MEDIUM:!LOW:!aNULL:!NULL:!SHA;
+    ssl_ciphers "ECDHE+AESGCM:ECDHE+CHACHA20:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384";
     ssl_prefer_server_ciphers on;
     ssl_session_cache shared:SSL:10m;
     ssl_session_tickets off;
@@ -39,22 +39,27 @@ server {
 
     error_page 404 /index.php;
 
-    #location ^~ /.well-known/acme-challenge/ {
-    #    root /var/www/src;
-    #    try_files $uri = 404;
-    #}
+    location ^~ /.well-known/acme-challenge/ {
+        root /var/www/src;
+        allow all;
+        default_type "text/plain";
+        try_files $uri /index.php = 404;
+    }
 
-    #location = /.well-known/acme-challenge/ {
-    #    return 404;
-    #}
+    location /storage {
+        root /var/www/src/public;
+        access_log off;
+        expires 30d;
+        try_files $uri /index.php?$query_string;
+    }
 
     location ~ \.php$ {
         fastcgi_pass app:9000;
-        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         include fastcgi_params;
     }
 
-    location ~ /\.(?!well-known).* {
+    location ~ /\. {
         deny all;
     }
 }
