--- a/infra/docker/nginx/default.conf
+++ b/infra/docker/nginx/default.conf
@@ -30,6 +30,14 @@ server {
 
     charset utf-8;
 
+    gzip on;
+    gzip_vary on;
+    gzip_proxied any;
+    gzip_comp_level 6;
+    gzip_buffers 16 8k;
+    gzip_http_version 1.1;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript application/font-woff application/font-woff2;
+
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
