--- a/infra/docker/nginx/default.conf
+++ b/infra/docker/nginx/default.conf
@@ -54,6 +54,12 @@ server {
         try_files $uri /index.php = 404;
     }
 
+    location /storage/image/ {
+        add_header 'Access-Control-Allow-Origin' '*';
+        add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS';
+        add_header 'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, Accept';
+    }
+
     location /storage {
         root /var/www/src/public;
         access_log off;
