--- a/infra/docker/php/php.local.ini
+++ b/infra/docker/php/php.local.ini
@@ -14,10 +14,10 @@ default_charset = UTF-8
 
 [opcache]
 zend_extension=opcache
-opcache.enable=1
-opcache.enable_cli=1
-opcache.optimization_level=0x7FFFBFFF
-opcache.jit_buffer_size = 128M
+opcache.enable=0
+opcache.enable_cli=0
+opcache.optimization_level=0
+opcache.jit = 0
 
 [Date]
 date.timezone = Asia/Tokyo
