--- a/.github/workflows/staging-pull-and-launch.yml
+++ b/.github/workflows/staging-pull-and-launch.yml
@@ -14,7 +14,7 @@ jobs:
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            cd /home/${{ secrets.SSH_USER }}/src/cfcrating
+            cd /opt/staging
 
             make pull
             make up
